--- a/assets/css/dashboard-rtl.css
+++ b/assets/css/dashboard-rtl.css
@@ -68,7 +68,7 @@
 .wpmud.wpmud-themes div.select-container.sel-category{
 	margin: 0 10px  0 0;
 }
-.wpmud.wpmud-plugins .input-group label[for=sel_category], .wpmud.wpmud-themes .input-group label[for=sel_category]{		 	    		 				  	 	
+.wpmud.wpmud-plugins .input-group label[for=sel_category], .wpmud.wpmud-themes .input-group label[for=sel_category]{
 	padding-left: 0;
 	padding-right: 30px;
 }
@@ -143,4 +143,4 @@
 }
 
 
-/* 855406-1616676199-au */
+/* 855406-1623112085 */
